@@ -7,6 +7,7 @@ import java.util.Scanner;
 public class Main {
     public static void main(String[] args) {
         /* 적합한 컬렉션 타입의 변수 선언 */
+        List<Integer> intList = new ArrayList<>();
 
         /* 연산의 결과를 저장할 수 있도록 적합한 타입의 배열을 생성합니다. */
         /* 연산의 결과가 저장된 배열의 마지막 index를 저장하는 변수를 선언 */
@@ -16,21 +17,22 @@ public class Main {
 
         while (true) {
 
-            System.out.println("첫 번째 숫자를 입력하세요: ");
+            System.out.print("첫 번째 숫자를 입력하세요: ");
             // Scanner를 사용하여 양의 정수를 입력받고 적합한 타입의 변수에 저장합니다.
-            int n1 = Integer.parseInt(sc.nextLine());
-            System.out.println("두 번째 숫자를 입력하세요: ");
+            int n1 = sc.nextInt();
+            System.out.print("두 번째 숫자를 입력하세요: ");
             // Scanner를 사용하여 양의 정수를 입력받고 적합한 타입의 변수에 저장합니다.
-            int n2 = Integer.parseInt(sc.nextLine());
+            int n2 = sc.nextInt();
 
-            System.out.println("사칙연산 기호를 입력하세요: ");
+            System.out.print("사칙연산 기호를 입력하세요: ");
             // 사칙연산 기호를 적합한 타입으로 선언한 변수에 저장합니다.
-            char ch = sc.nextLine().charAt(0);
+            char ch = sc.next().charAt(0);
 
             int result = 0;
             /* 제어문을 활용하여 위 요구사항을 만족할 수 있게 구현합니다.*/
 
             result = cal.calculator(n1, n2, ch);
+            intList = cal.getIntList();
 
             System.out.println("결과: " + result);
 
@@ -38,13 +40,14 @@ public class Main {
             System.out.println("가장 먼저 저장된 연산 결과를 삭제하시겠습니까? (remove 입력 시 삭제)");
             /* 위 요구사항에 맞게 구현 */
             if (sc.nextLine().equals("remove")) {
-                cal.intList.removeFirst();
+                intList.remove(0);
+                cal.setIntList(intList);
             }
 
             System.out.println("저장된 연산결과를 조회하시겠습니까? (inquiry 입력 시 조회)");
             /* 위 요구사항에 맞게 구현 */
             if (sc.nextLine().equals("inquiry"));
-            for (Integer i : cal.intList) {
+            for (Integer i : cal.getIntList()) {
                 System.out.println("결과: " + i);
             }
 
